# personal_website

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  compose.prod.yml  compose.testing.yml  compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/personal_website/: README.md  __init__.py  __main__.py  application.py
backend/src/personal_website/alembic/: README  alembic.ini  env.py  migrations.py  script.py.mako
backend/src/personal_website/alembic/versions/: 2023-11-25-25d1105a1c62.py
backend/src/personal_website/api/: __init__.py
backend/src/personal_website/api/endpoints/: __init__.py  me.py  utils.py  work.py
backend/src/personal_website/core/: config.py  constants.py  grecaptcha.py  utils.py
backend/src/personal_website/db/: __init__.py  dbhelper.py  session.py
backend/src/personal_website/db/orm/: base.py  common.py
backend/src/personal_website/pycron_jobs/: __init__.py  send_tg_messages.py
backend/src/personal_website/schemas/: __init__.py  me.py  utils.py  work.py
db/: Dockerfile  init.sql  postgresql.conf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  store.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AboutMeItem.vue  ContactsItem.vue  FooterItem.vue  HeaderItem.vue  LocaleSelectItem.vue  MainItem.vue  PageNavigationItem.vue  ThemeToggleItem.vue  WorkExperienceItem.vue
frontend/src/components/icons/: Icon.vue  IconGitHub.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ru.json
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue  PetProjectsView.vue
proxy/: Dockerfile  nginx.conf
